<resources>
    <string name="app_name">LoriApp</string>

    <!-- Strings related to login -->
    <string name="error.invalid_email">This email address is invalid</string>
    <string name="error.invalid_password">This password is too short</string>
    <string name="error.incorrect_password">This password is incorrect</string>
    <string name="error.field_required">This field is required</string>

    <string name="login.login_hint">Login</string>
    <string name="login.pass_hint">Password</string>
    <string name="login.login">Login</string>
    <string name="title_activity_week_tasks">WeekTasksActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="error_task_is_empty">Task not be empty</string>
    <string name="error_offline">You are offline</string>
    <string name="spend_time">Spend time</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="search_by_date">Search by date</string>
    <string name="from">From</string>

    <string name="select_tags">Select tags</string>
    <string name="login_error_title">Login error</string>
    <string name="edit_do_you_delete">Do you want delete entry?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="to">To</string>
    <string name="description_or_title">Text</string>
    <string name="dismiss">Dismiss</string>
</resources>
